carousel added for products in home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
 <app-login></app-login>
 
 <br> <br> <br>
+
+<app-home></app-home>
 <app-footer></app-footer>
 
 <!-- <router-outlet></router-outlet> -->
