--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<owl-carousel-o [options]="customOptions">
+
+  <ng-template carouselSlide *ngFor= "let product of productDataItems">
+
+    <div class="product__card">
+      <img *ngIf="product" [src]= "product.productImg" alt="logo">
+      <div class="product__card--details">
+        <div class="product__card--catogory">
+            <p class="product__card--catogory-name"> {{product.productName}} </p>
+            <p class="product__card--catogory-type"> {{product.productType}} </p>
+        </div>
+        <span class="product__card--catogory-price"> {{product.productPrice}} </span>
+      </div>
+    </div>
+  </ng-template>
+
+</owl-carousel-o>
+
