preview page added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
 <br> <br> <br>
 
 <app-home></app-home>
+<br>
+<app-product-preview></app-product-preview>
+<br>
 <app-footer></app-footer>
 
 <!-- <router-outlet></router-outlet> -->
