--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,5 +1,4 @@
-@import "../../../assets/variables.scss";
-
+@import "../../../assets/scss/variables.scss";
 
 .footer {
   padding         : 40px 20px;
